--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -3,7 +3,7 @@
   margin: 26px 0 0;
   font-weight: 400;
   font-size: 18px;
-  line-height: 26px;
+  line-height: 163%;
   color: #ffffff;
   max-width: 484px;
 }
